<resources>
    <string name="app_name">Wonderfull Indonesia</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="contact">Kontak</string>
    <string name="address">Alamat</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">DAFTAR</string>
    <string name="home">Home</string>
    <string name="choose">Choose</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_view">Lihat Semuanya</string>
    <string name="news_update">Wisata Populer</string>
    <string name="update">Update</string>
    <string name="out">Keluar</string>
    <string name="delete">Delete Account</string>
    <string name="maps_view">Peta Wilayah</string>
</resources>