<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    
    android:layout_height="match_parent"
    tools:context=".activities.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:padding="20dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_height="200dp"
                android:layout_marginTop="50dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_account"
                android:layout_width="200dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFull_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/full_name"
                    android:textColor="@color/colorText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/contact"
                    android:textColor="@color/colorText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/address"
                    android:textColor="@color/colorText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/username"
                    android:textColor="@color/colorText" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:textColor="@android:color/black"
                android:layout_marginTop="20dp"
                android:id="@+id/btnUpdate"
                style="@style/TextAppearance.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:text="@string/update" />

            <Button
                android:id="@+id/btnLogOut"
                android:layout_width="match_parent"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_height="60dp"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:text="@string/out"/>

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_height="60dp"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:text="@string/delete"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>