<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/layoutRv"
                android:background="#C4CDE1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
android:background="#f0f0f0"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvNavigation"
                        android:overScrollMode="never"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="25dp"
                        android:layout_width="fill_parent"
                        tools:itemCount="8"
                        app:spanCount="4"
                        android:foreground="?android:attr/selectableItemBackground"
                        tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        tools:listitem="@layout/rv_navigation_item"
                        android:layout_height="wrap_content" />

                    <Button
                        android:layout_marginEnd="25dp"
                        android:layout_gravity="end"
                        android:id="@+id/textButton"
                        android:textAllCaps="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:text="@string/all_view"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        />
                </LinearLayout>




            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvClicked"
                android:layout_marginTop="5dp"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_update"
                android:textColor="@color/colorPrimaryDark"
                android:layout_below="@id/layoutRv"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_marginStart="10dp"
                android:layout_below="@id/tvClicked"
                android:layout_width="match_parent"
                android:overScrollMode="never"
                android:scrollbars="none"
                android:orientation="horizontal"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/rv_tour_item"
                android:layout_height="wrap_content"/>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_below="@id/tvClicked"
                android:layout_height="150dp"
                app:cardPreventCornerOverlap="false"
                android:layout_margin="10dp"
                android:id="@+id/cardView"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                android:elevation="10dp"
                android:visibility="invisible"
                app:cardBackgroundColor="@android:color/transparent">

                <ImageView
                    android:id="@+id/imageView"
                    android:scaleType="centerCrop"
                    android:src="@drawable/no_images"
                    android:layout_width="200dp"
                    android:layout_height="150dp"/>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvMost"
                android:layout_marginTop="175dp"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maps_view"
                android:textColor="@color/colorText"
                android:layout_below="@id/tvClicked"
                android:textStyle="bold" />


                <ImageView
                    android:layout_margin="20dp"
                    android:layout_below="@id/tvMost"
                    android:src="@drawable/no_images"
                    android:id="@+id/imageMaps"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"/>


        </RelativeLayout>


    </ScrollView>

</FrameLayout>